--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,25 @@
+/* Global Styles */
+:root {
+	--primary-color: #17a2b8;
+	--dark-color: #343a40;
+	--light-color: #f4f4f4;
+	--danger-color: #dc3545;
+	--success-color: #28a745;
+}
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
 		sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	font-size: 1rem;
+	line-height: 1.6;
+	background-color: var(--light-color);
+	color: var(--dark-color);
 }
 
 ul {
@@ -23,7 +39,7 @@ li {
 	margin: 0;
 	padding: 0;
 	text-align: center;
-	border: 1px solid black;
+	border: 1px solid var(--dark-color);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -37,9 +53,10 @@ li {
 }
 
 .button {
-	background-color: #4caf50;
+	background-color: var(--success-color);
 	border: none;
-	color: white;
+	border-radius: 5px;
+	color: var(--light-color);
 	padding: 1vw 2vw;
 	text-align: center;
 	text-decoration: none;
@@ -52,22 +69,49 @@ li {
 li:nth-child(n):nth-child(-n + 9) {
 	border-top-width: 4px;
 }
-li:nth-child(n + 73):nth-child(-n + 81) {
-	border-bottom-width: 4px;
-}
-li:nth-child(3n) {
-	border-right-width: 4px;
-}
-li:nth-child(9n + 1) {
-	border-left-width: 4px;
-}
-li:nth-child(n + 19):nth-child(-n + 27) {
-	border-bottom-width: 4px;
-}
+
+li:nth-child(n + 73):nth-child(-n + 81),
+li:nth-child(n + 19):nth-child(-n + 27),
 li:nth-child(n + 46):nth-child(-n + 54) {
 	border-bottom-width: 4px;
 }
 
+li:nth-child(3n) {
+	border-right-width: 4px;
+}
+
+li:nth-child(9n + 1) {
+	border-left-width: 4px;
+}
+
+/* Loader  */
+.lds-dual-ring {
+	display: inline-block;
+	width: 26vw;
+	height: 26vw;
+}
+.lds-dual-ring:after {
+	content: ' ';
+	display: block;
+	width: 23vw;
+	height: 23vw;
+	margin: 1vw;
+	border-radius: 50%;
+	border: 6px solid var(--primary-color);
+	border-color: var(--primary-color) transparent var(--primary-color)
+		transparent;
+	animation: lds-dual-ring 1.7s linear infinite;
+}
+@keyframes lds-dual-ring {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+/* Media  */
 @media screen and (max-width: 768px) {
 	.app-wrapper {
 		flex-direction: column;
@@ -83,6 +127,9 @@ li:nth-child(n + 46):nth-child(-n + 54) {
 	.app-wrapper {
 		flex-direction: column;
 		justify-content: space-around;
+	}
+	.button {
+		width: 70vw;
 	}
 	ul {
 		grid-template-columns: repeat(9, 8vw);
