--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ button:disabled {
 }
 
 .app-wrapper {
-	margin-top: 5vh;
+	margin-top: 2vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -134,6 +134,37 @@ li:nth-child(9n + 1) {
 	100% {
 		transform: rotate(360deg);
 	}
+}
+
+/* Alert  */
+.alert {
+	height: 4vw;
+	width: 70vw;
+	padding: 1vw;
+	text-align: center;
+	margin: 0 auto;
+	box-sizing: border-box;
+	font-size: calc(1vw + 5px);
+	color: var(--light-color);
+	background-color: var(--danger-color);
+
+	visibility: visible;
+	opacity: 1;
+	transition: opacity 1s linear;
+}
+
+.hidden {
+	visibility: hidden;
+	opacity: 0;
+	transition: visibility 0s 1s, opacity 1s linear;
+}
+
+.danger {
+	/* background-color: var(--danger-color); */
+}
+
+.success {
+	background-color: var(--success-color);
 }
 
 /* Media  */
